[gd_scene load_steps=2 format=3 uid="uid://dlk8m5n6p7q8r"]

[ext_resource type="Script" path="res://scripts/sleep/sheep_minigame.gd" id="1_sheep"]

[node name="SheepMinigame" type="CanvasLayer"]
layer = 10
script = ExtResource("1_sheep")

[node name="GameContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="GameContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.15, 0.3, 1)

[node name="GameArea" type="Control" parent="GameContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -100.0
offset_right = 300.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameBackground" type="ColorRect" parent="GameContainer/GameArea"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.2, 0.35, 0.3)

[node name="Fence" type="ColorRect" parent="GameContainer/GameArea"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 60.0
offset_right = 150.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.545, 0.271, 0.075, 1)

[node name="Sheep" type="ColorRect" parent="GameContainer/GameArea"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -80.0
offset_right = 50.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.2, 0.8, 1)

[node name="UI" type="Control" parent="GameContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Instructions" type="Label" parent="GameContainer/UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 50.0
offset_right = 300.0
offset_bottom = 120.0
grow_horizontal = 2
text = "Press SPACE when sheep jump over fence!
Count sheep to sleep well."
horizontal_alignment = 1

[node name="CalmMeter" type="ProgressBar" parent="GameContainer/UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 60.0
grow_horizontal = 0
max_value = 100.0
value = 50.0
show_percentage = false

[node name="CalmLabel" type="Label" parent="GameContainer/UI/CalmMeter"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -12.0
offset_right = 40.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
text = "Calm"
horizontal_alignment = 1

[node name="DistanceLabel" type="Label" parent="GameContainer/UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -60.0
offset_right = 400.0
offset_bottom = -20.0
grow_vertical = 0
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Distance: 0m | Fences: 0"

[node name="FeedbackLabel" type="Label" parent="GameContainer/UI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
text = "Perfect!"
horizontal_alignment = 1
vertical_alignment = 1

